# agentic-hiring-orchestrator

./: .gitignore  QUICKSTART.md  README.md  example_response.json
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/examples/: README.md  run_all_samples.py  run_pipeline.py
backend/examples/results/: .gitkeep
backend/examples/sample_data/: README.md  job_backend_engineer.txt  job_senior_ai_engineer.txt  resume_moderate_candidate.txt  resume_strong_candidate.txt
backend/notebooks/: README.md  example_usage.ipynb  testing_workflow.ipynb
backend/src/: config.py  graph.py  state.py
backend/src/api/: main.py
backend/src/graph/: __init__.py
backend/src/models/: __init__.py  interview.py  memory.py  packet.py  review.py  rubric.py
backend/src/nodes/: __init__.py  compliance_agent.py  hr_agent.py  orchestrator.py  synthesis.py  tech_agent.py
backend/src/prompts/: __init__.py  agent_prompts.py  orchestrator_prompts.py  test_prompts.py
backend/src/prompts/examples/: README.md  __init__.py  agent_review_examples.json  (+2 more)
backend/src/utils/: __init__.py  llm.py  output_formatters.py  prompt_helpers.py  validators.py
backend/tests/: README.md  conftest.py  test_utils.py
backend/tests/test_graph/: __init__.py  test_state_validation.py  test_workflow_integration.py
backend/tests/test_models/: __init__.py  test_interview.py  test_memory.py  test_packet.py  test_review.py  test_rubric.py
backend/tests/test_nodes/: __init__.py  test_compliance_agent.py  test_hr_agent.py  test_orchestrator.py  test_synthesis.py  test_tech_agent.py
(+25 files in other folders)
