[project]
name = "agentic-hiring-orchestrator"
version = "0.1.0"
description = "Multi-agent hiring evaluation system using LangGraph"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typing-extensions>=4.8.0",
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "ipython",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "notebook>=7.0.0",
]
viz = [
    "matplotlib>=3.8.0",
    "pandas",
]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
lint = "ruff check src/ tests/"
pipeline = "python examples/run_pipeline.py"
api = "uvicorn src.api.main:app --reload --port 8000"
notebook = "jupyter notebook notebooks/"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
